<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2013. "EnterpriseCoding"
  ~ ("EnterpriseCoding" constitutes; Nick Meessen, Jasper Burgers, Ferry Wienholts, Breunie Ploeg & Sjors Roelofs).
  ~
  ~ This content is released under the MIT License. A copy of this license should be included with the project otherwise can be found at http://opensource.org/licenses/MIT
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/task_title_label"
            />

    <EditText
            android:id="@+id/task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapSentences"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/task_category_label"
            android:layout_marginTop="20dp"/>

    <Spinner
            android:id="@+id/task_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/task_date_label"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

    <Button
            android:id="@+id/task_set_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:background="@drawable/date_button"
            android:textColor="#000000"/>


    <CheckBox
            android:id="@+id/task_important"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_important"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="17sp"/>

    <Button
            android:id="@+id/save_task_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_save_task"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:background="@color/green"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

</LinearLayout>