<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2013. "EnterpriseCoding"
  ~ ("EnterpriseCoding" constitutes; Nick Meessen, Jasper Burgers, Ferry Wienholts, Breunie Ploeg & Sjors Roelofs).
  ~
  ~ This content is released under the MIT License. A copy of this license should be included with the project otherwise can be found at http://opensource.org/licenses/MIT
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="20dp">
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/head_bg"
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            xmlns:android="http://schemas.android.com/apk/res/android">
    </RelativeLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/category_title_label"
            android:id="@+id/textView"/>

    <EditText
            android:id="@+id/category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/category_colour_label"
            android:layout_marginTop="20dp"
            android:id="@+id/textView"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/category_colour_button"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/cat_color_button"
            android:layout_margin="5dp"/>

    <Button
            android:id="@+id/edit_category_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_save_category"
            android:layout_marginTop="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:background="@color/green"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
